# EventBooking

./: .gitignore  README.md  pyproject.toml
apps/: models.py  serializers.py  urls.py  views.py
root/: settings.py  urls.py
